c1/reset_board
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1575:17: error: use of undeclared identifier 'unk_41A660'
memcpy( board, &unk_41A660, sizeof( board)); 
                ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1580:12: error: expected expression
*( _OWORD *)is_promoted = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1580:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)is_promoted = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1581:12: error: expected expression
*( _OWORD *)&is_promoted[4] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1581:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[4] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1582:12: error: expected expression
*( _OWORD *)&is_promoted[8] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1582:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[8] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1583:12: error: expected expression
*( _OWORD *)&is_promoted[12] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1583:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[12] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1584:12: error: expected expression
*( _OWORD *)&is_promoted[16] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1584:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[16] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1585:12: error: expected expression
*( _OWORD *)&is_promoted[20] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1585:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[20] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1586:12: error: expected expression
*( _OWORD *)&is_promoted[24] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1586:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[24] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1587:12: error: expected expression
*( _OWORD *)&is_promoted[28] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1587:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[28] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1588:12: error: expected expression
*( _OWORD *)&is_promoted[32] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1588:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[32] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1589:12: error: expected expression
*( _OWORD *)&is_promoted[36] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1589:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[36] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1590:12: error: expected expression
*( _OWORD *)&is_promoted[40] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1590:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[40] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1591:12: error: expected expression
*( _OWORD *)&is_promoted[44] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1591:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[44] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1592:12: error: expected expression
*( _OWORD *)&is_promoted[48] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1592:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[48] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1593:12: error: expected expression
*( _OWORD *)&is_promoted[52] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1593:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[52] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1594:12: error: expected expression
*( _OWORD *)&is_promoted[56] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1594:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&is_promoted[56] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1596:12: error: expected expression
*( _OWORD *)&holding[1][12] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1596:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][12] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1597:12: error: expected expression
*( _OWORD *)&holding[1][8] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1597:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][8] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1598:12: error: expected expression
*( _OWORD *)&holding[1][4] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1598:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][4] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1599:12: error: expected expression
*( _OWORD *)&holding[1][0] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1599:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[1][0] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1600:12: error: expected expression
*( _OWORD *)&holding[0][12] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1600:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][12] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1601:12: error: expected expression
*( _OWORD *)&holding[0][8] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1601:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][8] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1602:12: error: expected expression
*( _OWORD *)&holding[0][4] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1602:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][4] = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1603:12: error: expected expression
*( _OWORD *)&holding[0][0] = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/utils.c:1603:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&holding[0][0] = 0LL; 
   ^
47 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/reset_board/src/obj/utils.o] Error 1
